[tool.poetry]
name = "jazzband"
version = "20.7.1"
description = "Code to run jazzband.co"
authors = ["Jannis Leidel <jannis@leidel.info>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
alembic = "==1.4.2"
argparse = "==1.4.0"
asn1crypto = "==1.3.0"
atomicwrites = "==1.3.0"
attrs = "==19.3.0"
babel = "==2.8.0"
bleach = "==3.1.4"
blinker = "==1.4"
brotli = "==1.0.7"
certifi = "==2020.4.5.1"
cffi = "==1.14.0"
chardet = "==3.0.4"
click = "==7.1.1"
click-log = "==0.3.2"
colorama = "==0.4.3"
configparser = "==5.0.0"
cryptography = "==2.9"
"delegator.py" = "==0.1.1"
docutils = "==0.16"
feedgen = "==0.9.0"
flask = "==1.1.2"
flask-admin = "==1.5.6"
flask-caching = "==1.8.0"
flask-compress = "==1.4.0"
flask-dance = {version = "==3.0.0", extras = ["sqla"]}
flask-flatpages = "==0.7.2"
flask-hookserver = "==1.1.0"
flask-kvsession = "==0.6.2"
flask-login = "==0.4.1"
flask-mail = "==0.9.1"
flask-migrate = "==2.5.3"
flask-redis = "==0.4.0"
flask-sqlalchemy = "==2.4.1"
flask-talisman = "==0.7.0"
flask-wtf = "==0.14.3"
funcsigs = "==1.0.2"
idna = "==2.10"
importlib-metadata = "==1.6.0"
ipaddress = "==1.0.23"
itsdangerous = "==1.1.0"
jeepney = "==0.4.3"
jinja2 = "==2.11.2"
keyring = "==21.2.0"
lxml = "==4.5.0"
mako = "==1.1.2"
markdown = "==3.2.1"
markupsafe = "==1.1.1"
more-itertools = "==8.2.0"
oauthlib = "==3.1.0"
ordereddict = "==1.1"
packaging = "==20.3"
pexpect = "==4.8.0"
pkginfo = "==1.5.0.1"
pluggy = "==0.13.1"
psycopg2-binary = "==2.8.5"
ptyprocess = "==0.6.0"
py = "==1.8.1"
pycparser = "==2.20"
pygments = "==2.6.1"
pyopenssl = "==19.1.0"
pyparsing = "==2.4.7"
python-dateutil = "==2.8.1"
python-decouple = "==3.3"
python-dotenv = "==0.12.0"
python-editor = "==1.0.4"
pytz = "==2019.3"
pyuwsgi = "==2.0.18.post0"
pyyaml = "==5.3.1"
redis = "==3.5.3"
requests = {version = "==2.23.0", extras = ["security"]}
requests-oauthlib = "==1.3.0"
requests-toolbelt = "==0.9.1"
scandir = "==1.10.0"
secretstorage = "==3.1.2"
sentry-sdk = {version = "==0.14.3", extras = ["flask"]}
simplekv = "==0.14.1"
six = "==1.14.0"
spinach = "==0.0.11"
sqlalchemy = "==1.3.16"
sqlalchemy-utils = "==0.36.3"
tqdm = "==4.45.0"
urllib3 = "==1.25.9"
urlobject = "==2.4.3"
walrus = "==0.8.1"
wcwidth = "==0.1.9"
webencodings = "==0.5.1"
werkzeug = "==1.0.1"
wtforms = "==2.3.1"
zipp = "==3.1.0"


[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-flask = "^1.0.0"
pytest-dotenv = "^0.5.2"
pytest-datadir = "^1.3.1"
pytest-mock = "^3.2.0"
honcho = "^1.0.1"
mock = "^4.0.2"
twine = "^3.2.0"
readme-renderer = "^26.0"

[tool.dephell.main]
from = {format = "piplock", path = "requirements.txt"}
to = {format = "poetry", path = "pyproject.toml"}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
